Details
-
Bug
-
Status: Closed
-
P2
-
Resolution: Fixed
-
11
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8217120 | 11.0.3 | Xueming Shen | P2 | Resolved | Fixed | master |
JDK-8210581 | 11.0.2 | Xueming Shen | P2 | Resolved | Fixed | b01 |
JDK-8210521 | 11.0.1 | Sean Coffey | P2 | Closed | Fixed | b10 |
Description
ADDITIONAL SYSTEM INFORMATION :
Windows10 1703 (64bit)
OpenJDK 11(Oracle JDK builds 28)
A DESCRIPTION OF THE PROBLEM :
If the file specified when reading the file does not exist, the Japanese message of FileNotFoundException that occurs is garbled.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
When reading a file, specify a file that does not exist.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
java.io.FileNotFoundException: test.txt (ãã¡ã¤ã«åããã£ã¬ã¯ããªåãã¾ãã¯ããªã¥ã¼ã ã©ãã«ã®æ§æãééã£ã¦ãã¾ãã)
ACTUAL -
java.io.FileNotFoundException: test.txt (ÂtÂ@ÂC¼ÂAÂfÂBÂÂÂNÂgÂ)
---------- BEGIN SOURCE ----------
import java.io.FileNotFoundException;
import java.io.FileReader;
public class Sample {
public static void main(String[] args) {
try {
FileReader fr = new FileReader("test.txt");
} catch (FileNotFoundException e) {
e.printStackTrace();
}
}
}
---------- END SOURCE ----------
FREQUENCY : always
Windows10 1703 (64bit)
OpenJDK 11(Oracle JDK builds 28)
A DESCRIPTION OF THE PROBLEM :
If the file specified when reading the file does not exist, the Japanese message of FileNotFoundException that occurs is garbled.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
When reading a file, specify a file that does not exist.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
java.io.FileNotFoundException: test.txt (ãã¡ã¤ã«åããã£ã¬ã¯ããªåãã¾ãã¯ããªã¥ã¼ã ã©ãã«ã®æ§æãééã£ã¦ãã¾ãã)
ACTUAL -
java.io.FileNotFoundException: test.txt (ÂtÂ@ÂC¼ÂAÂfÂBÂÂÂNÂgÂ)
---------- BEGIN SOURCE ----------
import java.io.FileNotFoundException;
import java.io.FileReader;
public class Sample {
public static void main(String[] args) {
try {
FileReader fr = new FileReader("test.txt");
} catch (FileNotFoundException e) {
e.printStackTrace();
}
}
}
---------- END SOURCE ----------
FREQUENCY : always
Attachments
Issue Links
- backported by
-
JDK-8210581 The Japanese message of FileNotFoundException garbled.
-
- Resolved
-
-
JDK-8217120 The Japanese message of FileNotFoundException garbled.
-
- Resolved
-
-
JDK-8210521 The Japanese message of FileNotFoundException garbled.
-
- Closed
-
- relates to
-
JDK-8016579 (process) IOException thrown by ProcessBuilder.start() method is incorrectly encoded
-
- Resolved
-
-
JDK-8200243 System error message is decoded as invalid encoding in Windows.
-
- Closed
-