8210345: The Japanese message of FileNotFoundException garbled

Reviewed-by: alanb